# isyswasfa

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: lib.rs
http/: Cargo.toml
http/src/: lib.rs
test/: Cargo.toml
test/cases/: Cargo.toml
test/cases/echo/: Cargo.toml
test/cases/echo/src/: lib.rs
test/cases/hash-all/: Cargo.toml
test/cases/hash-all/src/: lib.rs
test/cases/middleware/: Cargo.toml
test/cases/middleware/src/: lib.rs
test/cases/round-trip/: Cargo.toml
test/cases/service/: Cargo.toml
test/cases/service/src/: lib.rs
test/guest/: Cargo.toml
test/guest/src/: lib.rs
test/guest/wit/: guest.wit
test/middleware/: Cargo.toml
test/middleware/src/: lib.rs
test/python-cases/echo/: app.py
test/python-cases/hash-all/: app.py
test/python-cases/round-trip/: app.py
test/python-cases/service/: app.py
test/round-trip/: Cargo.toml
test/round-trip/src/: lib.rs
test/rust-cases/: Cargo.toml
test/rust-cases/echo/src/: lib.rs
test/rust-cases/hash-all/: Cargo.toml
test/rust-cases/hash-all/src/: lib.rs
test/rust-cases/middleware/src/: lib.rs
test/rust-cases/round-trip/src/: lib.rs
test/rust-cases/router/: Cargo.toml
test/rust-cases/router/src/: lib.rs
test/rust-cases/service/src/: lib.rs
test/service/: Cargo.toml
test/service/src/: lib.rs
test/src/: lib.rs
test/wasi-http-handler/: Cargo.toml
test/wasi-http-handler/src/: lib.rs
test/wit/: guest.wit
transform/: Cargo.toml
transform/src/: lib.rs
wit/: dummy.wit  guest.wit  test.wit
