[package]
name = "isyswasfa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.2", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
wasmtime = { path = "../wasmtime/crates/wasmtime" }
wasmtime-wasi = { path = "../wasmtime/crates/wasi" }
isyswasfa-host = { path = "../host" }
isyswasfa-http = { path = "../http" }
hyper = { version = "1.2.0", features = ["server", "http1"] }
http-body-util = "0.1.0"
bytes = "1.5.0"
async-trait = "0.1.77"
futures = "0.3.30"
http = "1.1.0"
hyper-util = { version = "0.1.3", features = ["tokio"] }
