[package]
name = "isyswasfa-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bytes = "1.5.0"
futures = "0.3.30"
once_cell = "1.19.0"
tracing = "0.1.40"
wasmparser = "0.120.0"
wasmtime = { git = "https://github.com/dicej/wasmtime", branch = "isyswasfa", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", branch = "isyswasfa" }
