[package]
name = "isyswasfa-http"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
wasmtime = { git = "https://github.com/dicej/wasmtime", branch = "isyswasfa", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", branch = "isyswasfa" }
isyswasfa-host = { path = "../host" }
futures = "0.3.30"
anyhow = "1.0.80"
