[package]
name = "isyswasfa-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
wasmparser = "0.119.0"
wasmtime = { path = "../wasmtime/crates/wasmtime", features = ["component-model"] }
wasmtime-wasi = { path = "../wasmtime/crates/wasi" }
isyswasfa-host = { path = "../host" }
wit-component = "0.20.0"
reqwest = "0.11.23"
bytes = "1.5.0"
futures = "0.3.30"
wasm-compose = { path = "../wasm-tools/crates/wasm-compose" }
tempfile = "3.9.0"
indexmap = "2.2.1"
flate2 = "1.0.28"
